# caramel

./: .flake8  .gitignore  LICENSE  README.rst  pyproject.toml  tox.ini
.github/workflows/: tests.yml
caramel/: __init__.py  caramel.py
caramel/cases/: __init__.py  camel_case.py  pascal_case.py  snake_case.py  utils.py
caramel/cases/tests/: conftest.py  test_camel_case.py  test_pascal_case.py  test_snake_case.py  testdata.csv
caramel/constructor/: __init__.py  camel_case.py  constructor.py  rules.py  snake_case.py  utils.py
caramel/constructor/tests/: test_caramel.py
caramel/lexer/: lexer.py  token_container.py  tokens.py
