[tool.poetry]
name = "caramel"
version = "0.1.0"
description = "Package to convert strings between the snake_case, camelCase, PascalCase and other arbitrary cases"
authors = ["Thomas Reichardt <treichardt@swin.edu.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
tox = "^3.26.0"
pytest-cov = "^3.0.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
